Update FindCommand and its JUnitTest