@@ -12,9 +12,11 @@ import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
+import seedu.address.commons.util.StringUtil;
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
@@ -34,14 +36,17 @@ public class FindCommandTest {
         NameContainsKeywordsPredicate secondPredicate =
                 new NameContainsKeywordsPredicate(Collections.singletonList("second"));
 
-        FindCommand findFirstCommand = new FindCommand(firstPredicate);
-        FindCommand findSecondCommand = new FindCommand(secondPredicate);
+        List<String> firstKeywords = List.of("first");
+        List<String> secondKeywords = List.of("second");
+
+        FindCommand findFirstCommand = new FindCommand(firstPredicate, firstKeywords);
+        FindCommand findSecondCommand = new FindCommand(secondPredicate, secondKeywords);
 
         // same object -> returns true
         assertTrue(findFirstCommand.equals(findFirstCommand));
 
-        // same values -> returns true
-        FindCommand findFirstCommandCopy = new FindCommand(firstPredicate);
+        // same values -> returns true (equality is based on predicate)
+        FindCommand findFirstCommandCopy = new FindCommand(firstPredicate, firstKeywords);
         assertTrue(findFirstCommand.equals(findFirstCommandCopy));
 
         // different types -> returns false
@@ -50,34 +55,45 @@ public class FindCommandTest {
         // null -> returns false
         assertFalse(findFirstCommand.equals(null));
 
-        // different person -> returns false
+        // different predicate -> returns false
         assertFalse(findFirstCommand.equals(findSecondCommand));
     }
 
     @Test
     public void execute_zeroKeywords_noPersonFound() {
-        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
-        NameContainsKeywordsPredicate predicate = preparePredicate(" ");
-        FindCommand command = new FindCommand(predicate);
+        String input = " ";
+        NameContainsKeywordsPredicate predicate = preparePredicate(input);
+        List<String> keywords = List.of(input);
+        FindCommand command = new FindCommand(predicate, keywords);
         expectedModel.updateFilteredPersonList(predicate);
+
+        String quotedKeywords = StringUtil.wrapEachInQuotesAndJoin(keywords);
+        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0, quotedKeywords);
+
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Collections.emptyList(), model.getFilteredPersonList());
     }
 
     @Test
     public void execute_multipleKeywords_multiplePersonsFound() {
-        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3);
-        NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
-        FindCommand command = new FindCommand(predicate);
+        String input = "Kurz Elle Kunz";
+        NameContainsKeywordsPredicate predicate = preparePredicate(input);
+        List<String> keywords = Arrays.asList(input.split("\\s+"));
+        FindCommand command = new FindCommand(predicate, keywords);
         expectedModel.updateFilteredPersonList(predicate);
+
+        String quotedKeywords = StringUtil.wrapEachInQuotesAndJoin(keywords);
+        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3, quotedKeywords);
+
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredPersonList());
     }
 
     @Test
     public void toStringMethod() {
-        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(Arrays.asList("keyword"));
-        FindCommand findCommand = new FindCommand(predicate);
+        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(List.of("keyword"));
+        List<String> keywords = List.of("keyword");
+        FindCommand findCommand = new FindCommand(predicate, keywords);
         String expected = FindCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
         assertEquals(expected, findCommand.toString());
     }
